add some apis connect with productLike
